# Project

./: .env-example  Dockerfile  db.sqlite3  docker-compose-debug.yaml  docker-entrypoint.sh  manage.py  pyproject.toml
globa/: asgi.py  moysklad.py  settings.py  urls.py  wsgi.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_remove_config_change_date_remove_config_changed_by_and_more.py
